# making_my_agentic_setup_brrrrrr

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  Taskfile.yml  pyproject.toml
agents/: README.md  code-reviewer-buddy-tooled.md  code-reviewer-buddy.md  smelly-comments.md
commands/: README.md
configs/: anthropic.toml  bedrock.toml  credentials.env.example  personal.toml.example
docs/: extending.md  notifications.md  profiles-overview.md  profiles-quickstart.md  profiles.md  setup.md  usage.md
mcp/servers/: README.md
settings/: README.md  hooks-cc-notifier.json.tmpl  hooks-claude-notifier.json.tmpl  hooks-terminal-notifier.json.tmpl
shell/: profile-functions.sh  zsh-functions.sh
shell/notifications/: cc-notifier-installer.sh  claude-notifier.py  permission-dialog.sh  terminal-notifier.sh
skills/: README.md
tools/: __init__.py  config.py  install.py  notifications.py  profile.py  sync.py  validate.py
