[project]
name = "claude-config"
version = "0.1.0"
description = "Portable Claude Code configuration management"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
